@@ -38,7 +38,6 @@ import org.jkiss.code.NotNull;
 import org.jkiss.code.Nullable;
 import org.jkiss.dbeaver.DBDatabaseException;
 import org.jkiss.dbeaver.DBException;
-import org.jkiss.dbeaver.DBeaverPreferences;
 import org.jkiss.dbeaver.Log;
 import org.jkiss.dbeaver.model.*;
 import org.jkiss.dbeaver.model.access.DBAPasswordChangeInfo;
@@ -75,7 +74,6 @@ import java.util.List;
 import java.util.Objects;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.Future;
-import java.util.stream.Collectors;
 
 /**
  * DBeaver UI core
@@ -84,7 +82,6 @@ public class DesktopUI extends ConsoleUserInterface {
 
     private static final Log log = Log.getLog(DesktopUI.class);
 
-    private TrayIconHandler trayItem;
     private WorkbenchContextListener contextListener;
 
     public static DesktopUI getInstance() {
@@ -103,15 +100,10 @@ public class DesktopUI extends ConsoleUserInterface {
     }
 
     private void dispose() {
-        if (trayItem != null) {
-            trayItem.hide();
-        }
     }
 
     // This method is called during startup thru @ComponentReference in workbench
     public void initialize() {
-        this.trayItem = new TrayIconHandler();
-
         new AbstractJob("Workbench listener") {
             @Override
             protected IStatus run(DBRProgressMonitor monitor) {
@@ -131,26 +123,6 @@ public class DesktopUI extends ConsoleUserInterface {
         if (contextListener != null) {
             contextListener.deactivatePartContexts(part);
             contextListener.activatePartContexts(part);
-        }
-    }
-
-    @Override
-    public void notifyAgent(String message, int status) {
-        if (!DBWorkbench.getPlatform().getPreferenceStore().getBoolean(DBeaverPreferences.AGENT_LONG_OPERATION_NOTIFY)) {
-            // Notifications disabled
-            return;
-        }
-        if (TrayIconHandler.isSupported()) {
-            UIUtils.syncExec(() -> Display.getCurrent().beep());
-            getInstance().trayItem.notify(message, status);
-        } else {
-            DBeaverNotifications.showNotification(
-                "agent.notify",
-                "Agent Notification",
-                message,
-                status == IStatus.INFO ? DBPMessageType.INFORMATION :
-                    (status == IStatus.ERROR ? DBPMessageType.ERROR : DBPMessageType.WARNING),
-                null);
         }
     }
 
@@ -337,18 +309,18 @@ public class DesktopUI extends ConsoleUserInterface {
         }
         final List<Reply> reply = labels.stream()
             .map(s -> CommonUtils.isEmpty(s) ? null : new Reply(s))
-            .collect(Collectors.toList());
+            .toList();
 
-        return UIUtils.syncExec(new RunnableWithResult<UserChoiceResponse>() {
+        return UIUtils.syncExec(new RunnableWithResult<>() {
             public UserChoiceResponse runWithResult() {
                 List<Button> extraCheckboxes = new ArrayList<>(forAllLabels.size());
-                Integer[] selectedCheckboxIndex = { null };
+                Integer[] selectedCheckboxIndex = {null};
                 MessageBoxBuilder mbb = MessageBoxBuilder.builder(UIUtils.getActiveWorkbenchShell())
                     .setTitle(title)
                     .setMessage(message)
                     .setReplies(reply.stream().filter(Objects::nonNull).toArray(Reply[]::new))
                     .setPrimaryImage(DBIcon.STATUS_WARNING);
-                
+
                 if (previousChoice != null && reply.get(previousChoice) != null) {
                     mbb.setDefaultReply(reply.get(previousChoice));
                 }
@@ -373,7 +345,7 @@ public class DesktopUI extends ConsoleUserInterface {
                         }
                     });
                 }
-                
+
                 Reply result = mbb.showMessageBox();
                 int choiceIndex = reply.indexOf(result);
                 return new UserChoiceResponse(choiceIndex, selectedCheckboxIndex[0]);
@@ -384,11 +356,6 @@ public class DesktopUI extends ConsoleUserInterface {
     @Override
     public UserResponse showErrorStopRetryIgnore(String task, Throwable error, boolean queue) {
         return ExecutionQueueErrorJob.showError(task, error, queue);
-    }
-
-    @Override
-    public long getLongOperationTimeout() {
-        return DBWorkbench.getPlatform().getPreferenceStore().getLong(DBeaverPreferences.AGENT_LONG_OPERATION_TIMEOUT);
     }
 
     private static UserResponse showDatabaseError(String message, DBException error)
@@ -452,7 +419,7 @@ public class DesktopUI extends ConsoleUserInterface {
                 final BaseAuthDialog authDialog = new BaseAuthDialog(shell, prompt, passwordOnly, showSavePassword);
                 authDialog.setUserNameLabel(userNameLabel);
                 authDialog.setPasswordLabel(passwordLabel);
-                authDialog.setDescription(description);
+                authDialog.setDescription(description == null ? prompt : description);
                 if (!passwordOnly) {
                     authDialog.setUserName(userName);
                 }
